viewquest.html drop down fix
-dropdown was not showing right next to it’s button—it’s now fixed

--- a/questr/static/css/theme.css
+++ b/questr/static/css/theme.css
@@ -13,7 +13,7 @@ body {
 	min-height: 100%;
 	font-family: 'lucida grande',tahoma,verdana,arial,sans-serif;
 	font-size: 11px;
-	color: #333;
+	color: #141823;
 	line-height: 1.28;
 	padding: 0;
 	text-align: left;
